   * allow to select item in menu with right-click
   * right-click outside of a cancelable dialog to close it
   * added experimental new background read comment before draw_background()
     in display.cpp
   * the movement hint use multiline, colors and bigger font to display
     terrain defense and turns to reach
   * restore search of no-team-only map labels
   * ability to delete Add-Ons
 * Miscellaneous and bugfixes
   * fix bug #4299: word wrap for menus with very long option strings
   * various bugfixes and code cleanups
   * removed zipios support
   * poisonned/stoned text is properly centered again
   * fixed various bugs with stoned units, now no moves left and blind.
   * fixed a bug causing instantaneous move of unit when using acceleration
   * fixed briefly invisible unit when scrolling to show a move
   * fixed an invalid letter in the random winter scenario
   * fixed a invalid memory access if a map has width of 0 (bug #9301)
   * reduce memory usage for the default zoom level
   * fix various cheat-bugs to detect hidden enemies: using resistance info
     (bug #9119), search by name (bug #9314), change of hidden icon (bug #9288)

Version 1.3.3:
 * campaigns:
   * Northern Rebirth
     * Completed Scenario 'Ray of Hope'.
   * Sceptre of Fire:
     * imported from Wescamp
   * Son of the Black Eye:
     * Merged into mainline for testing.
   * Descent into Darkness
     * added to the pack
     * new Troll Shaman graphics
   * Under the Burning Suns
     * new WML in first and second scenario
     * tweaked second scenario map
     * removed a bunch of custom units
     * removed a bunch of custom terrains
     * new playable unit in scenario 2
     * new dehydration logic in scenario 2
     * new ambush logic in scenario 2
     * new Troll Shaman graphics
   * The South Guard
     * improved Deoran graphics
   * The Rise of Wesnoth
     * new Wose Sapling, Warrior King graphics
 * graphics