@@ -52,6 +52,7 @@ Version 1.3.3+svn:
      terrain defense and turns to reach
    * restore search of no-team-only map labels
    * ability to delete Add-Ons
+   * make disabled buttons more obviously disabled
  * Miscellaneous and bugfixes
    * fix bug #4299: word wrap for menus with very long option strings
    * various bugfixes and code cleanups
